<resources>
    <string name="app_name">Universe in Pixels</string>
    <string name="nasa_api">KpPKYvbEQzkIwY4QwQBnMpU1Srnwp8Uel2gl976B</string>
    <string name="NASA_photo_of_the_day">NASA Photo of The Day</string>
    <string name="loading">Loading...</string>
    <string name="button_text">Search</string>
    <string name="title_activity_i_s_s_tracker">Map</string>
    <string name="apod_description">Travel interstellar space with NASA\'s Astronomy Picture of the day</string>
    <string name="rover_description">Browse through all the photos taken by the Spirit, Opportunity ,and Curiosity rover.</string>
    <string name="iss_description">Locate the location of the International Space Station with our Live ISS Tracker.</string>
    <string name="enter_date">Enter Date</string>
    <string name="random">Random</string>
    <string name="spirit_rover">Spirit</string>
    <string name="opportunity_rover">Opportunity</string>
    <string name="curiosity_rover">Curiosity</string>
    <string name="error_message">Error getting data.</string>
    <string name="rover_button_text">Rover</string>
    <string name="sol_button_text">SOL</string>

</resources>