<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/radioGroupRovers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    <RadioButton
        android:id="@+id/spiritRover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spirit_rover" />

    <RadioButton
        android:id="@+id/opportunityRover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opportunity_rover" />

    <RadioButton
        android:id="@+id/curiosityRover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/curiosity_rover" />
    </RadioGroup>
</RelativeLayout>
