<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background= "@drawable/main_background"
    tools:context=".ApodActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
        <Button
            android:id="@+id/dateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="searchDate"
            android:text="@string/enter_date" />
      <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
          android:layout_weight="2"
          android:onClick="searchApoc"
        android:text="@string/random" />

    </LinearLayout>

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="30sp"
        android:text="@string/NASA_photo_of_the_day"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.github.chrisbanes.photoview.PhotoView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:adjustViewBounds="true"
                android:layout_height="match_parent"/>

            <TextView
                android:paddingTop="12dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:id="@+id/authorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ebedf2"
                android:layout_gravity="center"
                android:textSize="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>


    </ScrollView>

</LinearLayout>